<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="357dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/registre_nuevo_plastico"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/agregue_una_foto"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_android_black_24dp"
                android:layout_gravity="center"

                android:contentDescription="@string/plastico" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/descripcion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/describa"
                android:inputType="text"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/tipo"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/TiposdePlastico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="343dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:text="@string/registrar"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="343dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:text="@string/cancelar"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>